samples/_failures_safe/1761478958_34d9ad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e837b5ec.c: In function ‘main’:
./samples/SAFE/__tmp_e837b5ec.c:158:16: error: missing terminating " character
  158 |         printf("No entries found with specified level
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e837b5ec.c:158:9: error: expected expression at end of input
  158 |         printf("No entries found with specified level
      |         ^~~~~~
./samples/SAFE/__tmp_e837b5ec.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e837b5ec.c:158:9: error: expected declaration or statement at end of input
